--- a/Slovak/main/InCallUI.apk/res/values-sk/strings.xml
+++ b/Slovak/main/InCallUI.apk/res/values-sk/strings.xml
@@ -380,4 +380,11 @@ Stlačte \"%1$s\" a potom vyberte \"%2$s\"."</string>
     <string name="yesterday">Včera</string>
     <string name="saf_permission_recorder_unlock_screen_message">Pre ukladanie nahrávok, najskôr odomknite vaše zariadenie. Odomknúť teraz?</string>
 	<string name="msim_select_default_last">Použité nedávno</string>
+	
+<string name="dsda_answer_call_prompt">Prijatím tohto hovoru ukončíte prebiehajúci hovor.</string>
+     <string name="dsda_not_incall_sim_mo_fail_desc">"Na hovory sa teraz nedá použiť SIM karta %1$d. Aktuálne sieťové prostredie nepodporuje funkciu dvoch SIM kariet."</string>
+     <string name="dsda_swap_call_prompt">Ak budete pokračovať, prepnete sa na hlasový hovor.</string>
+     <string name="multi_call_manager_other_calls">Ďalšie hovory (%1$d)</string>
+     <string name="select_other_sim_card_dial">Použiť SIM kartu %1$d</string>
+	
 </resources>
