--- a/Slovak/main/MiuiScreenRecorder.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiScreenRecorder.apk/res/values-sk/strings.xml
@@ -209,4 +209,5 @@ Dotykom ju zobrazíte"</string>
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+<string name="invisible_mode_error_tip">Ste v režime inkognito. Nie je možné nahrávať zvuk.</string>	
 </resources>
