--- a/Slovak/main/ThemeManager.apk/res/values-sk/strings.xml
+++ b/Slovak/main/ThemeManager.apk/res/values-sk/strings.xml
@@ -1361,4 +1361,7 @@ ale obsah ktorý hľadáte nie je dostupný vo vašej krajine."</string>
     <string name="toast_lockscreen_apply_success_but_home_apply_failured">Úspešne použité na uzamknutú obrazovku. Nepodarilo sa použiť na plochu.</string>
     <string name="toast_transparent_wallpaper_filter_set_failured">Nepodarilo sa použiť</string>
     <string name="toast_transparent_wallpaper_filter_set_successfully">Úspešne použité</string>
+	
+    <string name="no_used_title">Nepoužíté</string>
+    <string name="no_used_wallpaper">Nepoužíté</string>	
 </resources>
